Update paper based on Ralf's and Sasha's comments

--- a/fun4all/offline/papers/ppg239/references.bib
+++ b/fun4all/offline/papers/ppg239/references.bib
@@ -1,3 +1,22 @@
+@inproceedings{Bland:1999ct,
+    author = "Bland, L. C.",
+    title = "{Plans for spin physics at RHIC}",
+    booktitle = "{Workshop on Physics with Electron Polarized Ion Collider - EPIC '99}",
+    eprint = "hep-ex/9907058",
+    archivePrefix = "arXiv",
+    month = "4",
+    year = "1999"
+}
+
+@misc{aschenauer2015rhic,
+      title={The RHIC SPIN Program: Achievements and Future Opportunities}, 
+      author={Elke-Caroline Aschenauer and Alexander Bazilevsky and Markus Diehl and James Drachenberg and Kjeld Oleg Eyser and Renee Fatemi and Carl Gagliardi and Zhongbo Kang and Yuri V. Kovchegov and John Lajoie and Jeong-Hun Lee and Emanuele-R. Nocera and Daniel Pitonyak and Alexei Prokudin and Rodolfo Sassot and Ralf Seidl and Ernst Sichtermann and Matt Sievert and Bernd Surrow and Marco Stratmann and Werner Vogelsang and Anselm Vossen and Scott W. Wissink and Feng Yuan},
+      year={2015},
+      eprint={1501.01220},
+      archivePrefix={arXiv},
+      primaryClass={nucl-ex}
+}
+
 @article{1988364,
 title = "A measurement of the spin asymmetry and determination of the structure function g1 in deep inelastic muon-proton scattering",
 journal = "Physics Letters B",
