Update paper based on Sasha's comments

--- a/fun4all/offline/papers/ppg239/references.bib
+++ b/fun4all/offline/papers/ppg239/references.bib
@@ -692,3 +692,15 @@ url={https://doi.org/10.1007/JHEP09(2015)191}
   doi = {10.1103/PhysRevD.100.114027},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.100.114027}
 }
+@article{Bunce:2000uv,
+    author = "Bunce, Gerry and Saito, Naohito and Soffer, Jacques and Vogelsang, Werner",
+    title = "{Prospects for spin physics at RHIC}",
+    eprint = "hep-ph/0007218",
+    archivePrefix = "arXiv",
+    reportNumber = "YITP-SB-00-34",
+    doi = "10.1146/annurev.nucl.50.1.525",
+    journal = "Ann. Rev. Nucl. Part. Sci.",
+    volume = "50",
+    pages = "525--575",
+    year = "2000"
+}
