Update paper based on Sasha's comments

--- a/fun4all/offline/papers/ppg239/main.tex
+++ b/fun4all/offline/papers/ppg239/main.tex
@@ -133,7 +133,7 @@ In addition, an isolation criterion is imposed on the photon candidates, which c
 \begin{equation} \label{eq:iso}
 \gamma_{dir}^{iso} = \gamma_{total}^{iso} - \gamma_{\pi^0}^{iso} - \left( R_{\pi^0}^{miss} + V\delta_{h/\pi^0}^{\gamma} \right) \gamma_{\pi^0}^{isopair}.
 \end{equation}
-$\gamma_{\pi^0}^{iso}$ is the \pizero \ tagged photon yield when each of \pizero\ decay photons passes the isolation requirement. $\gamma_{\pi^0}^{isopair}$ is the yield when a photon from \pizero\ decays passes the isolation requirement while its partner photon energy is not included in the isolation cone energy sum. Therefore, $R_{\pi^0}^{miss}\gamma_{\pi^0}^{isopair}$ represents the yield of \pizero\ decay photons that are missing their partner photons. Similarly, $\delta_{h/\pi^0}^{\gamma}\gamma_{\pi^0}^{isopair}$ is the photons from other hadron decays that pass the isolation requirement while their partner photons energy is not included in the isolation cone energy sum. We use single $\eta$ and fast detector simulation to calculate the ratio of $\eta$ decay photons with and without isolation criteria, $V = \gamma_{iso}^{\eta}/\gamma_{inc}^{\eta}$ = 0.01-0.1, which depends on \pT. Since most photons from other hadron decays are from $\eta$ decays, we use this factor $V$ to take into account the isolation criteria influence for other hadron decay photons.
+$\gamma_{\pi^0}^{iso}$ is the \pizero \ tagged photon yield when each of \pizero\ decay photons passes the isolation requirement. $\gamma_{\pi^0}^{isopair}$ is the yield when a photon from \pizero\ decays passes the isolation requirement while its partner photon energy is not included in the isolation cone energy sum. Therefore, $R_{\pi^0}^{miss}\gamma_{\pi^0}^{isopair}$ represents the yield of \pizero\ decay photons that are missing their partner photons. Similarly, $\delta_{h/\pi^0}^{\gamma}\gamma_{\pi^0}^{isopair}$ is the photons from other hadron decays that pass the isolation requirement while their partner photons energy is not included in the isolation cone energy sum. To include the effect that one of the decay photons is vetoed by its partner decay photon due to isolation criteria, we use single $\eta$ and fast detector simulation to calculate the ratio of $\eta$ decay photons with and without isolation criteria, $V = \gamma_{iso}^{\eta}/\gamma_{inc}^{\eta}$ = 0.01-0.1, which depends on \pT. Since most photons from other hadron decays are from $\eta$ decays, we use this factor $V$ to take into account the isolation criteria influence for other hadron decay photons.
 
 %where we subtract the reconstructed isolated \pizero's decay photons $\gamma_{\pi^0}^{iso}$, those missed their partner photons $R_{\pi^0}^{miss}\gamma_{\pi^0}^{isopair}$ and other hadrons' ($\eta$, $\omega$ and $\eta'$) decay photons $V\delta_{h/\pi^0}^{\gamma}\gamma_{\pi^0}^{isopair}$ from total isolated photons $\gamma_{dir}^{iso} $. $R_{\pi^0}^{miss}$ and $\delta_{h/\pi^0}^{\gamma}$ are the same as those in the inclusive yield. There is a subtle difference between $\gamma_{\pi^0}^{iso}$ and $\gamma_{\pi^0}^{isopair}$: $\gamma_{\pi^0}^{iso}$ represents the yield of events when each of the \pizero decay photons passes the isolation requirement, while $\gamma_{\pi^0}^{isopair}$ is the yield when each \pizero decay photons passes the isolation requirement if its partner photon is not included in the isolation energy sum. It is then clear that we should subtract $R_{\pi^0}^{miss}\gamma_{\pi^0}^{isopair}$ (not $R_{\pi^0}^{miss}\gamma_{\pi^0}^{iso}$), because if the partner misses, it should not count in the isolation energy. Other hadron decay photons can also be vetoed by their partner photons which is included. Since \textcolor{red}{85\%} of other hadrons are $\eta$, we use $V$ as self-veto from $\eta$'s partner decay photon.
 
@@ -148,7 +148,7 @@ where $\epsilon$ includes corrections for the detector acceptance, photon recons
 %Figure~\ref{fig:inc} shows the measured inclusive photon cross section at midrapidity in polarized collisions at $\sqrt{s}$ = 510 GeV compared with NLO calculations from POWHEG + PYTHIA8 \cite{Nason_2004, Frixione_2007, Alioli2010, Jezo2016, Klasen2018} using CT14 parton distribution functions (PDF) \cite{PhysRevD.93.033006}. The pseudorapidity range for this measurement is |$\eta$| < 0.25 after the fiducial requirement that removes edge towers of the EMCal. POWHEG is a NLO partonic level generator, the output of which can be used as the input for PYTHIA8. The latter includes the multiparton interactions (MPI), parton showers (PS) and fragmentation processes. There is some phase space overlapping between POWHEG and PYTHIA8, which is solved by a proper veto algorithm. Here the renormalization and initial-state factorization scales vary from \pT/2 to 2\pT. There is no final-state factorization scale in PYTHIA8 as it uses string fragmentation instead. The calculation agrees well with the data at $p_T >$ 8 GeV within the uncertainties while it underestimates the cross section at lower \pT. The difference at low \pT becomes larger if the MPI is not included due to the lack of underlying event contributions.
 %POWHEG + PYTHIA8 gives much better prediction than NLO pQCD at $p_T <$ 8 GeV. (not sure if we want to include this unless we showed the both calculations) NLO pQCD underestimates the measurement 2$\sim$3 times due to lacking the underlying event from MPI and PS.
 
-Figure~\ref{fig:inc} shows the measured inclusive photon cross section at midrapidity in polarized collisions at $\sqrt{s}$ = 510 GeV compared with NLO pQCD calculations \cite{PhysRevD.48.3136,PhysRevD.50.1901} using NNPDF3.0 \cite{Ball2015,Bonvini2015} and GRV fragmentation functions (FF) \cite{PhysRevD.45.3986}. The pseudorapidity range for this measurement is |$\eta$| < 0.25 after the fiducial requirement that removes edge towers of the EMCal. The calculation is in good agreement with the data within the uncertainties for $p_T >$ 12 GeV/c, but underestimates the yield by up to 200\% for $p_T <$ 12 GeV/c. This discrepancy may be explained by lacking of multiparton interactions (MPI) and parton showers (PS) in the NLO pQCD calculation. We will discuss this further when comparing with the isolated direct photon cross secion.
+Figure~\ref{fig:inc} shows the measured inclusive photon cross section at midrapidity in polarized collisions at $\sqrt{s}$ = 510 GeV compared with NLO pQCD calculations \cite{PhysRevD.48.3136,PhysRevD.50.1901} using NNPDF3.0 \cite{Ball2015,Bonvini2015} and GRV fragmentation functions (FF) \cite{PhysRevD.45.3986}. The pseudorapidity range for this measurement is |$\eta$| < 0.25 after the fiducial requirement that removes edge towers of the EMCal. The calculation is in good agreement with the data within the uncertainties for $p_T >$ 12 GeV/c, but underestimates the yield by up to 66\% for $p_T <$ 12 GeV/c.
 
 \begin{figure}
 \includegraphics[width=0.5\textwidth]{CrossSection-photon-werner}
@@ -213,7 +213,7 @@ A_{LL} = \frac{1}{P_BP_Y} \frac{N_{++}-RN_{+-}}{N_{++}+RN_{+-}}.
 \end{equation}
 where $N_{++}$ ($N_{+-}$) is the number of isolated direct photons from the bunches with the same (opposite) helicities. $P_{B}$ and $P_{Y}$ are the polarizations for the two proton beams, and the average values in 2013 were 0.55 and 0.57, respectively \cite{POBLAGUEV2020164261}. $R$ $(= \mathcal{L_{++}}/\mathcal{L_{+-}}$) is the relative luminosity that is measured by the BBC. The systematic contribution of R to $A_{LL}$ was found to be 3.9 $\times$ $10^{-4}$.
 
-The asymmetry was calculated for photon candidates that passed the same time-of-flight, minimum energy, and isolation requirements as the cross section analysis. The z-vertex requirement of 30 cm is used for the asymmetry measurement. The asymmetry contribution for background photons from \pizero's decay was calculated from the sideband region (47-97 MeV/$c^2$ and 177-227 MeV/$c^2$) around the \pizero\ mass peak (112-162 MeV/$c^2$) using the inclusive photon sample due to the limited statistics in the isolated photon sample. The asymmetry for other hadron decays (mostly $\eta$'s decay) was taken as $A_{LL}^{\eta}$ from previous PHENIX measurement \cite{PhysRevD.90.012007}. We varied $A_{LL}^{\eta}$ by the quadratic sum of its statistical and systematic uncertainties to explore its systematic uncertainty. The background corrected asymmetry can be calculated as
+The asymmetry was calculated for photon candidates that passed the same time-of-flight, minimum energy, and isolation requirements as the cross section analysis. The z-vertex requirement of 30 cm is used for the asymmetry measurement. The asymmetry contribution for background photons from \pizero's decay was calculated from the sideband region (47-97 MeV/$c^2$ and 177-227 MeV/$c^2$) around the \pizero\ mass peak (112-162 MeV/$c^2$) using the inclusive photon sample due to the limited statistics in the isolated photon sample. The asymmetry for other hadron decays (mostly $\eta$'s decay) was taken as $A_{LL}^{\eta}$ from previous PHENIX measurement at $\sqrt{s}$ = 200 GeV by assuming $x_T$ scaling (TABLE~VII of \cite{PhysRevD.90.012007}). We varied $A_{LL}^{\eta}$ by the quadratic sum of its statistical and systematic uncertainties to explore its systematic uncertainty. The background corrected asymmetry can be calculated as
 
 \begin{equation} \label{eq:all-dir}
 A_{LL}^{dir} = \frac{A_{LL}^{total} - r_{\pi^0}A_{LL}^{\pi^0} -r_h A_{LL}^{\eta}}{1 - r_{\pi^0} - r_h},
