--- a/fun4all/offline/papers/ppg239/references.bib
+++ b/fun4all/offline/papers/ppg239/references.bib
@@ -1,22 +1,3 @@
-@inproceedings{Bland:1999ct,
-    author = "Bland, L. C.",
-    title = "{Plans for spin physics at RHIC}",
-    booktitle = "{Workshop on Physics with Electron Polarized Ion Collider - EPIC '99}",
-    eprint = "hep-ex/9907058",
-    archivePrefix = "arXiv",
-    month = "4",
-    year = "1999"
-}
-
-@misc{aschenauer2015rhic,
-      title={The RHIC SPIN Program: Achievements and Future Opportunities}, 
-      author={Elke-Caroline Aschenauer and Alexander Bazilevsky and Markus Diehl and James Drachenberg and Kjeld Oleg Eyser and Renee Fatemi and Carl Gagliardi and Zhongbo Kang and Yuri V. Kovchegov and John Lajoie and Jeong-Hun Lee and Emanuele-R. Nocera and Daniel Pitonyak and Alexei Prokudin and Rodolfo Sassot and Ralf Seidl and Ernst Sichtermann and Matt Sievert and Bernd Surrow and Marco Stratmann and Werner Vogelsang and Anselm Vossen and Scott W. Wissink and Feng Yuan},
-      year={2015},
-      eprint={1501.01220},
-      archivePrefix={arXiv},
-      primaryClass={nucl-ex}
-}
-
 @article{1988364,
 title = "A measurement of the spin asymmetry and determination of the structure function g1 in deep inelastic muon-proton scattering",
 journal = "Physics Letters B",
@@ -30,6 +11,21 @@ url = "http://www.sciencedirect.com/science/article/pii/0370269388915237",
 author = "{European Muon Collaboration}"
 }
 
+@article{PhysRevD.58.112001,
+  title = {Spin asymmetries ${A}_{1}$ and structure functions ${g}_{1}$ of the proton and the deuteron from polarized high energy muon scattering},
+  author = {Spin Muon Collaboration},
+  journal = {Phys. Rev. D},
+  volume = {58},
+  issue = {11},
+  pages = {112001},
+  numpages = {17},
+  year = {1998},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.58.112001},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.58.112001}
+}
+
 @article{ALEXAKHIN20078,
 title = "The deuteron spin-dependent structure function g1d and its first moment",
 journal = "Physics Letters B",
@@ -40,7 +36,29 @@ year = "2007",
 issn = "0370-2693",
 doi = "https://doi.org/10.1016/j.physletb.2006.12.076",
 url = "http://www.sciencedirect.com/science/article/pii/S037026930700113X",
-author = "{COMPASS Collaboration}"
+author = "{{COMPASS Collaboration}}"
+}
+
+@article{Bunce:1992vca,
+    author = "Bunce, G. and Carroll, A. and Courant, E. and Fernow, R. and Lee, Y. and Lowenstein, D. and Makdisi, Y. and Ratner, L. and Roser, T. and Tannenbaum, M.",
+    title = "{Proposal on spin physics using the RHIC polarized collider}",
+    journal = "BNL-104822-2014-IR",
+    doi = "10.2172/1151313",
+    month = "8",
+    year = "1992"
+}
+
+@article{doi:10.1146/annurev.nucl.50.1.525,
+author = {Bunce, Gerry and Saito, Naohito and Soffer, Jacques and Vogelsang, Werner},
+title = {Prospects for Spin Physics at RHIC},
+journal = {Annual Review of Nuclear and Particle Science},
+volume = {50},
+number = {1},
+pages = {525-575},
+year = {2000},
+doi = {10.1146/annurev.nucl.50.1.525},
+URL = {https://doi.org/10.1146/annurev.nucl.50.1.525},
+eprint = {https://doi.org/10.1146/annurev.nucl.50.1.525}
 }
 
 @article{ADCOX2003469,
@@ -678,6 +696,18 @@ url={https://doi.org/10.1007/JHEP09(2015)191}
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.113.012001}
 }
 
+@article{2014276,
+title = {A first unbiased global determination of polarized PDFs and their uncertainties},
+journal = {Nuclear Physics B},
+volume = {887},
+pages = {276-308},
+year = {2014},
+issn = {0550-3213},
+doi = {https://doi.org/10.1016/j.nuclphysb.2014.08.008},
+url = {https://www.sciencedirect.com/science/article/pii/S0550321314002636},
+author = {Emanuele R. Nocera and Richard D. Ball and Stefano Forte and Giovanni Ridolfi and Juan Rojo}
+}
+
 @article{PhysRevD.100.114027,
   title = {Monte Carlo sampling variant of the DSSV14 set of helicity parton densities},
   author = {de Florian, Daniel and Lucero, Gonzalo Agust\'{\i}n and Sassot, Rodolfo and Stratmann, Marco and Vogelsang, Werner},
@@ -691,16 +721,4 @@ url={https://doi.org/10.1007/JHEP09(2015)191}
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevD.100.114027},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.100.114027}
-}
-@article{Bunce:2000uv,
-    author = "Bunce, Gerry and Saito, Naohito and Soffer, Jacques and Vogelsang, Werner",
-    title = "{Prospects for spin physics at RHIC}",
-    eprint = "hep-ph/0007218",
-    archivePrefix = "arXiv",
-    reportNumber = "YITP-SB-00-34",
-    doi = "10.1146/annurev.nucl.50.1.525",
-    journal = "Ann. Rev. Nucl. Part. Sci.",
-    volume = "50",
-    pages = "525--575",
-    year = "2000"
 }
