First internal release of PPG239

--- a/fun4all/offline/papers/ppg239/main.tex
+++ b/fun4all/offline/papers/ppg239/main.tex
@@ -129,7 +129,7 @@ E\frac{d^3\sigma}{dp^3} = \frac{1}{\mathcal{L}} \cdot \frac{1}{2\pi p_T} \cdot \
 \end{equation}
 where $\epsilon$ includes corrections for the detector acceptance, photon reconstruction efficiency, trigger efficiency, and detector smearing effects. $r_{pile-up}$ is the correction for the pile-up effects that is approximately 0.8 for inclusive direct photons and 0.9 for isolated photons. The correction is obtained by a logarithmic extrapolation of the number of photons per event to zero event rate. $\mathcal{L}$ is the integrated luminosity used for the analyzed data, and $\Delta y$ is the rapidity range. 
 
-Figure~\ref{fig:inc} shows the measured inclusive photon cross section at midrapidity in polarized collisions at $\sqrt{s}$ = 510 GeV compared with NLO pQCD calculations \cite{PhysRevD.48.3136,PhysRevD.50.1901} using NNPDF3.0 \cite{Ball2015,Bonvini2015} and GRV fragmentation functions (FF) \cite{PhysRevD.45.3986}. The pseudorapidity range for this measurement is |$\eta$| < 0.25 after the fiducial requirement that removes edge towers of the EMCal. The calculation is in good agreement with the data within the uncertainties for $p_T >$ 12 GeV/c, but underestimates the yield by up to a factor of \sim 3 for $p_T <$ 12 GeV/c.
+Figure~\ref{fig:inc} shows the measured inclusive photon cross section at midrapidity in polarized collisions at $\sqrt{s}$ = 510 GeV compared with NLO pQCD calculations \cite{PhysRevD.48.3136,PhysRevD.50.1901} using NNPDF3.0 \cite{Ball2015,Bonvini2015} and GRV fragmentation functions (FF) \cite{PhysRevD.45.3986}. The pseudorapidity range for this measurement is |$\eta$| < 0.25 after the fiducial requirement that removes edge towers of the EMCal. The calculation is in good agreement with the data within the uncertainties for $p_T >$ 12 GeV/c, but underestimates the yield by up to a factor of $\sim$3 for $p_T <$ 12 GeV/c.
 
 \begin{figure}
 \includegraphics[width=0.5\textwidth]{CrossSection-photon-werner}
