Updated the paper draft after the second release

--- a/fun4all/offline/papers/ppg239/references.bib
+++ b/fun4all/offline/papers/ppg239/references.bib
@@ -11,9 +11,22 @@ url = "http://www.sciencedirect.com/science/article/pii/0370269388915237",
 author = "{European Muon Collaboration}"
 }
 
+@article{ASHMAN19891,
+title = {An investigation of the spin structure of the proton in deep inelastic scattering of polarised muons on polarised protons},
+journal = {Nuclear Physics B},
+volume = {328},
+number = {1},
+pages = {1-35},
+year = {1989},
+issn = {0550-3213},
+doi = {https://doi.org/10.1016/0550-3213(89)90089-8},
+url = {https://www.sciencedirect.com/science/article/pii/0550321389900898},
+author = {{European Muon Collaboration}},
+}
+
 @article{PhysRevD.58.112001,
   title = {Spin asymmetries ${A}_{1}$ and structure functions ${g}_{1}$ of the proton and the deuteron from polarized high energy muon scattering},
-  author = {Spin Muon Collaboration},
+  author = {{Spin Muon Collaboration}},
   journal = {Phys. Rev. D},
   volume = {58},
   issue = {11},
@@ -36,7 +49,22 @@ year = "2007",
 issn = "0370-2693",
 doi = "https://doi.org/10.1016/j.physletb.2006.12.076",
 url = "http://www.sciencedirect.com/science/article/pii/S037026930700113X",
-author = "{{COMPASS Collaboration}}"
+author = "{COMPASS Collaboration}"
+}
+
+@article{PhysRevD.75.012007,
+  title = {Precise determination of the spin structure function ${g}_{1}$ of the proton, deuteron, and neutron},
+  author = {{HERMES Collaboration}},
+  journal = {Phys. Rev. D},
+  volume = {75},
+  issue = {1},
+  pages = {012007},
+  numpages = {48},
+  year = {2007},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.75.012007},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.75.012007}
 }
 
 @article{Bunce:1992vca,
@@ -57,8 +85,7 @@ number = {1},
 pages = {525-575},
 year = {2000},
 doi = {10.1146/annurev.nucl.50.1.525},
-URL = {https://doi.org/10.1146/annurev.nucl.50.1.525},
-eprint = {https://doi.org/10.1146/annurev.nucl.50.1.525}
+URL = {https://doi.org/10.1146/annurev.nucl.50.1.525}
 }
 
 @article{ADCOX2003469,
@@ -68,7 +95,6 @@ volume = {499},
 number = {2},
 pages = {469-479},
 year = {2003},
-note = {The Relativistic Heavy Ion Collider Project: RHIC and its Detectors},
 issn = {0168-9002},
 doi = {https://doi.org/10.1016/S0168-9002(02)01950-2},
 url = {https://www.sciencedirect.com/science/article/pii/S0168900202019502},
@@ -82,12 +108,10 @@ volume = {499},
 number = {2},
 pages = {549-559},
 year = {2003},
-note = {The Relativistic Heavy Ion Collider Project: RHIC and its Detectors},
 issn = {0168-9002},
 doi = {https://doi.org/10.1016/S0168-9002(02)01956-3},
 url = {https://www.sciencedirect.com/science/article/pii/S0168900202019563},
-author = {M. Allen and M.J. Bennett and M. Bobrek and J.B. Boissevain and S. Boose and E. Bosze and C. Britton and J. Chang and C.Y. Chi and M. Chiu and R. Conway and R. Cunningham and A. Denisov and A. Deshpande and M.S. Emery and A. Enokizono and N. Ericson and B. Fox and S.-Y. Fung and P. Giannotti and T. Hachiya and A.G. Hansen and K. Homma and B.V. Jacak and D. Jaffe and J.H. Kang and J. Kapustinsky and S.Y. Kim and Y.G. Kim and T. Kohama and P.J. Kroon and W. Lenz and N. Longbotham and M. Musrock and T. Nakamura and H. Ohnishi and S.S. Ryu and A. Sakaguchi and R. Seto and T. Shiina and M. Simpson and J. Simon-Gillo and W.E. Sondheim and T. Sugitate and J.P. Sullivan and H.W. {van Hecke} and J.W. Walker and S.N. White and P. Willis and N. Xu},
-keywords = {Relativistic heavy-ion collisions, Cherenkov detectors, Scintillation detectors, Tracking and position sensitive detectors}
+author = {{PHENIX Collaboration}}
 }
 
 @article{ADLER2001488,
@@ -100,8 +124,7 @@ year = {2001},
 issn = {0168-9002},
 doi = {https://doi.org/10.1016/S0168-9002(01)00627-1},
 url = {https://www.sciencedirect.com/science/article/pii/S0168900201006271},
-author = {C Adler and A Denisov and E Garcia and M Murray and H Stroebele and S White},
-keywords = {Heavy ions, Calorimeter, Luminosity}
+author = {C Adler and A Denisov and E Garcia and M Murray and H Stroebele and S White}
 }
 
 @article{APHECETCHE2003521,
@@ -111,7 +134,6 @@ volume = {499},
 number = {2},
 pages = {521-536},
 year = {2003},
-note = {The Relativistic Heavy Ion Collider Project: RHIC and its Detectors},
 issn = {0168-9002},
 doi = {https://doi.org/10.1016/S0168-9002(02)01954-X},
 url = {https://www.sciencedirect.com/science/article/pii/S016890020201954X},
@@ -125,7 +147,6 @@ volume = {499},
 number = {2},
 pages = {489-507},
 year = {2003},
-note = {The Relativistic Heavy Ion Collider Project: RHIC and its Detectors},
 issn = {0168-9002},
 doi = {https://doi.org/10.1016/S0168-9002(02)01952-6},
 url = {https://www.sciencedirect.com/science/article/pii/S0168900202019526},
@@ -138,12 +159,10 @@ journal = {Physics Procedia},
 volume = {37},
 pages = {993-1002},
 year = {2012},
-note = {Proceedings of the 2nd International Conference on Technology and Instrumentation in Particle Physics (TIPP 2011)},
 issn = {1875-3892},
 doi = {https://doi.org/10.1016/j.phpro.2012.02.440},
 url = {https://www.sciencedirect.com/science/article/pii/S1875389212017944},
-author = {Walter Sondheim},
-keywords = {RHIC, PHENIX, Vertex detector}
+author = {Walter Sondheim}
 }
 
 @article{POBLAGUEV2020164261,
