Updated the paper draft based on Brant's suggestions

--- a/fun4all/offline/papers/ppg239/main.tex
+++ b/fun4all/offline/papers/ppg239/main.tex
@@ -77,14 +77,14 @@
 %%%%%        the title or abstract.  Those two elements must stand
 %%%%%        alone and not be dependent on the macros defined here.
 
-\title{Measurement of Direct Photon Cross Section and Double Helicity Asymmetry at $\sqrt{s}$ = 510 GeV in $\vec{p}+\vec{p}$ Collisions at PHENIX}
+\title{Measurement of Direct Photon Cross Section and Double Helicity Asymmetry at \mbox{$\sqrt{s}$ = 510 GeV} in \mbox{$\vec{p}+\vec{p}$} Collisions}
 
 \author{PHENIX Collaboration Author List (Brant will insert later)}
 
 \date{\today}
 
 \begin{abstract}
-We present the measurement of the cross section and double helicity asymmetry \ALL\ of direct photon production in $\vec{p}+\vec{p}$ collisions at $\sqrt{s}$ = 510 GeV. The measurement has been performed at midrapidity ($|\eta| <$ 0.25 in pseudorapidity) with the PHENIX detector at RHIC. Direct photons are dominantly produced by the quark-gluon scattering at RHIC energies. Since they are produced from the initial partonic hard scattering and do not interact via the strong force, this measurement provides a clean and direct access to the gluons in the polarized proton in the gluon momentum fraction range 0.02 $< x <$ 0.08.
+We present the measurement of the cross section and double helicity asymmetry \ALL\ of direct photon production in $\vec{p}+\vec{p}$ collisions at $\sqrt{s}$ = 510 GeV. The measurement has been performed at midrapidity ($|\eta| <$ 0.25) with the PHENIX detector at the Relativistic Heavy Ion Collider. Direct photons are dominantly produced by the quark-gluon scattering at relativistic energies. Since direct photons are produced from the initial partonic hard scattering and do not interact via the strong force, this measurement provides a clean and direct access to the gluons in the polarized proton in the gluon momentum fraction range 0.02 $< x <$ 0.08.
 \end{abstract}
 
 % insert suggested PACS numbers in braces on next line
@@ -92,10 +92,6 @@ We present the measurement of the cross section and double helicity asymmetry \A
 	
 %\maketitle must follow title, authors, abstract, \pacs, and \keywords
 \maketitle
-
-%\section{Justification of PRL}
-%
-%Understanding how much proton spin comes from gluon helicity is important to solve the proton spin puzzle. Though there are many ways to probe the gluon helicity, e.g. through gluon fusion in polarized deep inelastic scattering or hadron/jet production in polarized $\vec{p}+\vec{p}$ collisions, they are either at next-to-leading order or suffering from large systematic uncertainty of fragmentation processes. On the other hand, the direct photon production in $\vec{p}+\vec{p}$ gives a clean probe to the gluon helicity at leading order with little fragmentation contributions. This ``golden'' channel was limited by statistics until the RHIC run of the year 2013, which provides the largest statistics for $\vec{p}+\vec{p}$ collisions at the only existing polarized proton collider. The measured double helicity asymmetries $A_{LL}$ will play an essential role in the future global fitting to extract the gluon helicity inside the proton at Bjorken x from 0.02 to 0.08. This will be the first direct photon cross section measurement at $\sqrt{s}$ = 510 GeV and the first direct photon $A_{LL}$ measurement.
 
 %%% To check PRL length insert this (uncommented) line after \\maketitle:
 \textbf{*** page break for PRL word count ***}  \clearpage
@@ -131,29 +127,14 @@ where $\epsilon$ includes corrections for the detector acceptance, photon recons
 
 The main systematic uncertainty sources are from the global energy scale of tuning the \pizero\ mass peak position and energy nonlinearity of the EMCal response at high \pT. These are calculated by a single \pizero\ or photon generator with a fast detector simulation and were determined to be 14--19\% (7--13\%) depending on \pT\ for the inclusive (isolated) direct photon cross section. The systematic uncertainties due to \pizero\ yield extraction and relative fractions of other hadron decays over \pizero\ are 2--12\% (0.5--2.5\%) and 5--14\% (0.4--6.0\%) for the inclusive (isolated) direct photon cross section, respectively. These contributions for the isolated direct photon cross section are relatively small compared to the inclusive case as the isolation requirement largely reduces these backgrounds. The loss of photons from conversions in the material before the EMCal is estimated using a single photon generator plus full GEANT detector simulation \cite{Brun:1994aa}. The material of the vertex tracker \cite{SONDHEIM2012993} leads to a (12.8 $\pm$ 1.9)\% probability for a photon to convert. Since only the West Arm had a vertex tracker installed, this systematic uncertainty only contributes to that Arm. Conversions in other materials lead to (3 $\pm$ 1)\% in the PbSc and (4.5 $\pm$ 1.3)\% in the PbGl for photon loss. When calculating the direct photon yield in Eq.~(\ref{eq:inc}) and Eq.~(\ref{eq:iso}), we vary the photon conversion rate by its systematic uncertainty to get 1--8\% relative uncertainties of the direct photon yield. The uncertainties from the EMCal detector resolution (2--8\%) and trigger (2--4.5\%) are also taken into account. Other uncertainties, including geometrical acceptance, trigger efficiencies, and pile-up effect, are in total less than 7\%.
 
-Figure~\ref{fig:inc} shows the measured inclusive direct photon cross section at midrapidity in proton collisions at $\sqrt{s}$ = 510 GeV compared with NLO pQCD calculations \cite{PhysRevD.48.3136, PhysRevD.50.1901} using NNPDF3.0 parton distribution functions \cite{Ball2015, Bonvini2015} and GRV fragmentation functions (FF) \cite{PhysRevD.45.3986}. The pseudorapidity range for this measurement is $|\eta| <$ 0.25 after the fiducial requirement that removes edge towers of the EMCal. The calculation is in good agreement with the data within the uncertainties for $p_T >$ 12 GeV/c, but underestimates the yield by up to a factor of $\sim$3 for \mbox{$p_T <$ 12 GeV/c}. This discrepancy is possibly due to multiparton interactions and parton showers \cite{Nason_2004, Frixione_2007, Alioli2010, Jezo2016, Klasen2018}. The isolated direct photon cross section is shown in Figure~\ref{fig:iso} as a function of \pT\ and compared with the NLO pQCD calculation \cite{PhysRevD.48.3136, PhysRevD.50.1901} using NNPDF3.0 \cite{Ball2015, Bonvini2015} and GRV FF \cite{PhysRevD.45.3986}. The calculation is in good agreement with our data within the uncertainties, with slight overestimation in the lowest \pT\ bins.
+Figure~\ref{fig:xsect}(a) shows the measured inclusive direct photon cross section at midrapidity in proton collisions at $\sqrt{s}$ = 510 GeV compared with NLO pQCD calculations \cite{PhysRevD.48.3136, PhysRevD.50.1901} using NNPDF3.0 parton distribution functions \cite{Ball2015, Bonvini2015} and GRV fragmentation functions (FF) \cite{PhysRevD.45.3986}. The pseudorapidity range for this measurement is $|\eta| <$ 0.25 after the fiducial requirement that removes edge towers of the EMCal. The calculation is in good agreement with the data within the uncertainties for $p_T >$ 12 GeV/c, but underestimates the yield by up to a factor of $\sim$3 for \mbox{$p_T <$ 12 GeV/c}. This discrepancy is possibly due to multiparton interactions and parton showers \cite{Nason_2004, Frixione_2007, Alioli2010, Jezo2016, Klasen2018}. The isolated direct photon cross section is shown in Figure~\ref{fig:xsect}(c) as a function of \pT\ and compared with the NLO pQCD calculation \cite{PhysRevD.48.3136, PhysRevD.50.1901} using NNPDF3.0 \cite{Ball2015, Bonvini2015} and GRV FF \cite{PhysRevD.45.3986}. The calculation is in good agreement with our data within the uncertainties, with slight overestimation in the lowest \pT\ bins.
 
-\begin{figure}
-\includegraphics[width=0.5\textwidth]{CrossSection-photon-werner}
-\caption{Inclusive direct photon cross section as a function of \pT\ compared with NLO pQCD calculations \cite{PhysRevD.48.3136, PhysRevD.50.1901} for different renormalization and factorization scales $\mu$ = \pT/2 (dashed line), \pT\ (solid line), 2\pT\ (dotted line). The bars represent statistical uncertainties and square brackets are for systematic uncertainties. The bottom plot shows the comparison of data and calculations.}
-\label{fig:inc}
-\end{figure}
-
-\begin{figure} 
-\centering
-\includegraphics[width=0.5\textwidth]{CrossSection-isophoton-werner}
-\caption{Similar to Figure~\ref{fig:inc} but for the isolated direct photon cross section.}
-\label{fig:iso}
-\end{figure}
-
-%In Figure~\ref{fig:iso2inc}, the ratio of isolated over inclusive direct photons is shown together with theoretical calculations. The MC simulations are from POWHEG + PYTHIA8 \cite{Nason_2004, Frixione_2007, Alioli2010, Jezo2016, Klasen2018}. POWHEG is an NLO partonic level generator, the output of which can be used as the input for PYTHIA8. The PYTHIA8 includes multiparton interactions (MPI), parton showers (PS), and fragmentation processes. There is some phase space overlapping between POWHEG and PYTHIA8, which is solved by a proper veto algorithm. POWHEG uses CT14 parton distribution functions (PDF) \cite{PhysRevD.93.033006}. There is no final-state factorization scale in PYTHIA8 as it uses PS and string fragmentation instead. In the POWHEG + PYTHIA8 simulations, the uncertainties from renormalization and factorization scales are canceled between the numerator and denominator of the fraction. The MC simulations were produced with and without MPI. When MPI is not included it overestimates the ratio similar to the NLO pQCD calculations while including MPI shows better agreement with this measurement.
-%
-%\begin{figure}
-%\centering
-%\includegraphics[width=0.5\textwidth]{Iso2Inc}
-%\caption{Isolated over inclusive direct photon ratio: bars are statistical uncertainties and square brackets are systematic uncertainties. POWHEG + PYTHIA8 with/without MPI and NLO pQCD calculations with different renormalization and factorization scales are also shown.}
-%\label{fig:iso2inc}
-%\end{figure}
+\begin{figure*}[hbt!]
+\includegraphics[width=0.48\linewidth]{CrossSection-photon-werner.pdf}
+\includegraphics[width=0.48\linewidth]{CrossSection-isophoton-werner.pdf}
+\caption{Cross sections for (a) inclusive and (c) isolated direct photons as a function of \pT\ compared with next-to-leading-order (NLO) pQCD calculations~\cite{PhysRevD.48.3136,PhysRevD.50.1901} for different renormalization and factorization scales $\mu$ = \pT/2 (dashed line), \pT\ (solid line), 2\pT\ (dotted line). The vertical bars show statistical uncertainties and square brackets are for systematic uncertainties. Not shown are 10\% absolute luminosity uncertainties. Panels (b) and (d) show comparisons of data and calculations.}
+\label{fig:xsect}
+\end{figure*} 
 
 The double helicity asymmetry is defined as
 \begin{equation} \label{eq:all}
@@ -173,12 +154,11 @@ where $r_{\pi^0}$ (10--14\%) and $r_h$ (0.6--1.4\%) are background fractions of 
 
 The double helicity asymmetry of isolated direct photon production in longitudinally polarized proton collisions at $\sqrt{s}$ = 510 GeV is shown in Figure~\ref{fig:all} for 6 $< p_{T} <$ 20 GeV/c. The NLO pQCD calculation was obtained using DSSV14 polarized PDF, NNPDF3.0 unpolarized PDF and GRV FF for the renormalization and factorization scales $\mu = p_T$ with $1\sigma$ uncertainty band via MC replicas (a sampling variant of the DSSV14 set of helicity parton densities) \cite{PhysRevLett.101.072001, PhysRevLett.113.012001, PhysRevD.100.114027}. The calculation is in good agreement with our results within the experimental uncertainties. In the asymmetry measurement, systematic effects are largely canceled. The systematic uncertainties in Figure~\ref{fig:all} include point-to-point uncertainties from background estimation and false asymmetry in the background due to pile-up effects at low \pT.
 
-\begin{figure}
-\centering
-\includegraphics[width=0.5\textwidth]{IsoPhotonALL-beam2}
-\caption{Double helicity asymmetry $A_{LL}$ $vs$ $p_{T}$ for isolated direct photon production in polarized p+p collisions at $\sqrt{s}$ = 510 GeV at midrapidity. Vertical error bars (boxes) represent the statistical (systematic) uncertainties. The NLO pQCD calculation is plotted as the solid curve with $1\sigma$ uncertainty band via MC replicas \cite{PhysRevLett.101.072001, PhysRevLett.113.012001, PhysRevD.100.114027}.}
+\begin{figure}[htb]
+\includegraphics[width=1.0\linewidth]{IsoPhotonALL-beam2.pdf}
+\caption{Double helicity asymmetry $A_{LL}$ $vs$ $p_{T}$ for isolated direct-photon production in polarized $p$$+$$p$ collisions at $\sqrt{s}=510$ GeV at midrapidity. Vertical error bars (boxes) represent the statistical (systematic) uncertainties. Not shown are $3.9 \times 10^{-4}$ shift uncertainty from relative luminosity and 6.6\% scale uncertainty from polarization. The NLO pQCD calculation is plotted as the solid curve with $1\sigma$ uncertainty band via MC replicas~\cite{PhysRevLett.101.072001,PhysRevLett.113.012001,PhysRevD.100.114027}.}
 \label{fig:all}
-\end{figure}
+\end{figure} 
 
 In summary, PHENIX has measured the cross section and \ALL\ of direct photons at midrapidity in proton collisions at $\sqrt{s}$ = 510 GeV. The NLO pQCD calculations are consistent with our results except at lower \pT\ where the calculations underestimate the inclusive direct photon cross section. With isolation criteria, the partonic level calculation agrees well with our measurement. It is the first time that the \ALL\ of direct photons is measured. It is sensitive to the polarized gluon distribution inside the proton and will provide an independent constraint on the gluon’s contribution to the proton spin in future global analyses.
 %%% For help see /phenix/WWW/p/info/dp/000/template/template4.tex
